# wasi-sensor-discussion

./: .gitignore  README.md  frame_management.md  renovate.json  sensing.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: main.yml  wasmtime.yml
guest/: Cargo.toml  README.md  build.sh
guest_c/: build.sh  main.c
guest_rust/: Cargo.toml  build.sh
guest_rust/src/: lib.rs
host/: Cargo.toml
host/src/: dummy_device.rs  main.rs  pool.rs  traits.rs
host_wasmtime/: Cargo.toml  README.md
host_wasmtime/src/: dummy_device.rs  main.rs  nokhwa.rs  pool.rs  traits.rs
wit/: property.wit  sensor.wit  world.wit
