[package]
name = "guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
fraction = "0.14"
getopts = "0.2"
wit-bindgen = "0.16.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg"] }
