[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nokhwa", "dummy"]
nokhwa = ["dep:nokhwa"]
dummy = ["dep:fraction", "dep:image"]

[dependencies]
# released versions of nokhwa is a bit broken for avfoundation.
# https://github.com/l1npengtul/nokhwa/pull/151
# https://github.com/l1npengtul/nokhwa/pull/152
nokhwa = {git = "https://github.com/yamt/nokhwa", rev = "0.10+fixes", features = ["input-native", "output-threaded"], optional = true}

fraction = { version = "0.15", optional = true }
image = { version = "0.25.1", default-features = false, optional = true }

anyhow = "1.0.79"
tracing = { version = "0.1.40", features = ["max_level_trace"] }
tracing-subscriber = "0.3.18"
async-trait = "0.1.77"
tokio = { version = "1.36.0", default-features = false }

# preview2 and component-model are still moving targets.
wasmtime = { version = "16.0.0", default-features = false, features = ["component-model", "cranelift"]}
wasmtime-wasi = { version = "16.0.0", default-features = false, features = ["preview2", "sync"] }
